--- a/pandas pract/pandas_fundamentals.ipynb
+++ b/pandas pract/pandas_fundamentals.ipynb
@@ -24,20 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in c:\\users\\tayya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (2.2.3)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
+      "Requirement already satisfied: pandas in c:\\users\\tayya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (2.2.3)\n",
       "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\tayya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas) (2.2.2)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\tayya\\appdata\\roaming\\python\\python313\\site-packages (from pandas) (2.9.0.post0)\n",
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\tayya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas) (2025.1)\n",
       "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\tayya\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas) (2025.1)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\tayya\\appdata\\roaming\\python\\python313\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
+      "Requirement already satisfied: six>=1.5 in c:\\users\\tayya\\appdata\\roaming\\python\\python313\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "Name: Tayyab Marks, dtype: int64"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "Name: Tayyab marks, dtype: int64"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "array([ 65,  56,  89, 100])"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
        "Name: Subscribers gained, Length: 365, dtype: int64"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "Name: runs, Length: 215, dtype: int64"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "[1500 rows x 2 columns]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "Name: lead, Length: 1500, dtype: object"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
        "Name: lead, Length: 1500, dtype: object"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "Name: lead, Length: 1500, dtype: object"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "Name: runs, dtype: float64"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
        "'Ranveer Singh'"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        "'Alia butt'"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
        "Name: runs, Length: 215, dtype: bool"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
        "<Axes: ylabel='count'>"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -970,13 +970,20 @@
        "Name: runs, dtype: int64"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "new"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataframe"
    ]
   },
   {
