--- a/open ai SDK agent/practice.ipynb
+++ b/open ai SDK agent/practice.ipynb
@@ -36,7 +36,7 @@
    ],
    "source": [
     "import os\n",
-    "os.environ[\"GEMINI_API_KEY\"] = \"AIzaSyDQ5UCL6CHe_-FbtSkDDuvpUE8mrF_FCTg\"\n",
+    "os.environ[\"GEMINI_API_KEY\"] = \"\"\n",
     "print(os.getenv(\"GEMINI_API_KEY\")) "
    ]
   },
