--- a/langraph learning/parallel_workflow.ipynb
+++ b/langraph learning/parallel_workflow.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'AIzaSyDQ5UCL6CHe_-FbtSkDDuvpUE8mrF_FCTg'"
+    "api_key = ''"
    ]
   },
   {
