--- a/langraph learning/iterative_workflow.ipynb
+++ b/langraph learning/iterative_workflow.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = 'AIzaSyDQ5UCL6CHe_-FbtSkDDuvpUE8mrF_FCTg'"
+    "api_key = ''"
    ]
   },
   {
